tests/parse_print/random_perturb/enum_liberated/delete-08/stderr.expected
Error:
    Parser error in file: tests/parse_print/random_perturb/enum_liberated/delete-08/delete-08.essence Error is:
ValidatorError tests/parse_print/random_perturb/enum_liberated/delete-08/delete-08.essence:1:1:
  |
1 | languae Essence 1.3
  | ^^^^^^^^^^^^^^^^^^^
Skipped tokens
